# fuckburl-bot

./: .gitignore  Cargo.toml
src/: event.rs  main.rs  replacer.rs
