[package]
name = "fuckburl-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = "symbols"
panic = "abort"
# lto = "thin"

[profile.release.package.frankenstein]
opt-level = "s"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "env"] }
clap-verbosity-flag = "3"
fancy-regex = "0.14"
form_urlencoded = "1.2"
futures = { version = "0.3" }
futures-util = "0.3"
log = "0.4"
once_cell = "1.18"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
url = "2.4"
v_htmlescape = "0.15.8"

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros", "parking_lot"]

[dependencies.log4rs]
version = "1.2"
default-features = false
features = ["all_components", "pattern_encoder"]

# Telegram API
[dependencies.frankenstein]
version = "0.37"
default-features = false
features = ["async-http-client"]
