[package]
name = "fuckburl-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = "symbols"
panic = "abort"
# lto = "thin"

[profile.release.package.frankenstein]
opt-level = "s"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "env"] }
clap-verbosity-flag = "3"
fancy-regex = "0.14"
form_urlencoded = "1.2"
futures = { version = "0.3" }
futures-util = "0.3"
image = { version = "0.25.5", default-features = false, features = [
  "jpeg",
  "png",
  "rayon",
] }
log = "0.4"
once_cell = "1.18"
qrcode = "0.14.1"
regex = "1"
rqrr = { git = "https://github.com/Colerar/rqrr.git" }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.16.0"
toml = "0.8"
url = "2.4"
v_htmlescape = "0.15.8"

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "macros", "parking_lot"]

[dependencies.log4rs]
version = "1.2"
default-features = false
features = ["all_components", "pattern_encoder"]

# Telegram API
[dependencies.frankenstein]
version = "0.40"
default-features = false
features = ["client-reqwest"]
